--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1"
   },
@@ -46,5 +48,16 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
