--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.1",
     "nprogress": "^0.2.0",
     "qiankun": "^2.10.3",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
