--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "element-plus": "^2.3.1",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.35",
+    "pinia-plugin-persist": "^1.0.0",
     "qiankun": "^2.10.3",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
