--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "pinia": "^2.0.35",
     "pinia-plugin-persist": "^1.0.0",
     "qiankun": "^2.10.3",
+    "three": "^0.152.2",
+    "three-css2drender": "^1.0.0",
+    "three-obj-mtl-loader": "^1.0.3",
+    "three-orbit-controls": "^82.1.0",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
