--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/g6": "^4.8.13",
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
